# ReedSolomon

./: .gitignore  CMakeLists.txt  README.md  ReedSolomonVersion.hpp.cmake  ReedSolomonVersion.hpp.in  build.sh  configure.sh  generateVisualStudioProject.bat  generateXcodeProject.sh
ReedSolomonEC/: GaloisField.cpp  GaloisField.hpp  Polynomial.cpp  Polynomial.hpp  ReedSolomon.cpp  ReedSolomon.hpp  Utils.cpp  Utils.hpp  main.cpp
ReedSolomonEC.xcodeproj/: project.pbxproj
ReedSolomonEC.xcodeproj/project.xcworkspace/xcuserdata/marc.xcuserdatad/: UserInterfaceState.xcuserstate
ReedSolomonEC.xcodeproj/xcuserdata/marc.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ReedSolomonEC.xcodeproj/xcuserdata/marc.xcuserdatad/xcschemes/: xcschememanagement.plist
example/: CMakeLists.txt  Example.cpp  main.cpp
examples/chunk example/: CMakeLists.txt  ChunkExample.cpp
examples/simple example/: CMakeLists.txt  SimpleExample.cpp
include/: DataChunker.hpp  GaloisField.hpp  Polynomial.hpp  ReedSolomon.hpp  ReedSolomonImpl.hpp  ReedSolomonVersion.hpp  Utils.hpp
src/: GaloisField.cpp  Polynomial.cpp  ReedSolomon.cpp  ReedSolomonImpl.cpp
